1.5.0.1/_sources/Reference/NodeReference/GafferScene/index.md.txt
<!-- !NO_SCROLLSPY -->

GafferScene
===========

```{eval-rst}
.. toctree::
    :titlesonly:
    :maxdepth: 1

    AimConstraint.md
    AttributeQuery.md
    AttributeTweaks.md
    AttributeVisualiser.md
    Attributes.md
    BoundQuery.md
    Camera.md
    CameraTweaks.md
    ClippingPlane.md
    ClosestPointSampler.md
    CollectPrimitiveVariables.md
    CollectScenes.md
    CollectTransforms.md
    CoordinateSystem.md
    CopyAttributes.md
    CopyOptions.md
    CopyPrimitiveVariables.md
    Cryptomatte.md
    Cube.md
    CurveSampler.md
    CustomAttributes.md
    CustomOptions.md
    DeleteAttributes.md
    DeleteCurves.md
    DeleteFaces.md
    DeleteGlobals.md
    DeleteObject.md
    DeleteOptions.md
    DeleteOutputs.md
    DeletePoints.md
    DeletePrimitiveVariables.md
    DeleteRenderPasses.md
    DeleteSets.md
    Duplicate.md
    Encapsulate.md
    ExistenceQuery.md
    ExternalProcedural.md
    Filter.md
    FilterProcessor.md
    FilterQuery.md
    FilterResults.md
    FilteredSceneProcessor.md
    FramingConstraint.md
    FreezeTransform.md
    Grid.md
    Group.md
    ImageScatter.md
    ImageToPoints.md
    Instancer.md
    InteractiveRender.md
    Isolate.md
    LightToCamera.md
    LocaliseAttributes.md
    MapOffset.md
    MapProjection.md
    MergeCurves.md
    MergeMeshes.md
    MergePoints.md
    MergeScenes.md
    MeshDistortion.md
    MeshNormals.md
    MeshSegments.md
    MeshSplit.md
    MeshTangents.md
    MeshTessellate.md
    MeshToPoints.md
    MeshType.md
    MotionPath.md
    ObjectToScene.md
    OpenGLAttributes.md
    OpenGLShader.md
    OptionQuery.md
    OptionTweaks.md
    Options.md
    Orientation.md
    Outputs.md
    Parameters.md
    Parent.md
    ParentConstraint.md
    PathFilter.md
    Plane.md
    PointConstraint.md
    PointsType.md
    PrimitiveVariableExists.md
    PrimitiveVariableQuery.md
    PrimitiveVariables.md
    Prune.md
    Rename.md
    Render.md
    RenderPassShader.md
    RenderPassTypeAdaptor.md
    RenderPassWedge.md
    RenderPasses.md
    ResamplePrimitiveVariables.md
    ReverseWinding.md
    Scatter.md
    SceneElementProcessor.md
    SceneNode.md
    SceneProcessor.md
    SceneReader.md
    SceneWriter.md
    Set.md
    SetFilter.md
    SetQuery.md
    SetVisualiser.md
    Shader.md
    ShaderAssignment.md
    ShaderBall.md
    ShaderQuery.md
    ShaderTweakProxy.md
    ShaderTweaks.md
    ShuffleAttributes.md
    ShufflePrimitiveVariables.md
    Sphere.md
    StandardAttributes.md
    StandardOptions.md
    SubTree.md
    Text.md
    Transform.md
    TransformQuery.md
    UDIMQuery.md
    UVSampler.md
    Unencapsulate.md
    UnionFilter.md
    Wireframe.md
```